<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ##### -->
    <!-- Fonts -->
    <!-- ##### -->

    <string name="label_fontFamily">sans-serif</string>
    <string name="button_fontFamily">sans-serif</string>

    <!-- ####### -->
    <!-- App bar -->
    <!-- ####### -->

    <string name="action_help">Help</string>
    <string name="action_export_settings">Export&#8230;</string>
    <string name="action_import_settings">Import&#8230;</string>
    <string name="action_search">Search</string>

    <!-- ################# -->
    <!-- Navigation Drawer -->
    <!-- ################# -->

    <string name="drawer_action_open">Abracadabra!</string>
    <string name="drawer_action_closed">Hasta la Vista, Baby!</string>
    <string name="drawer_header_text">T3h.Unh4X4b13.P@$$w0rd.$01ut10n</string>
    <string name="drawer_header_settings">Settings</string>
    <string name="drawer_header_about">About</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">View/Edit</string>
    <string name="drawer_item_import">Import&#8230;</string>
    <string name="drawer_item_export">Export&#8230;</string>
    <string name="drawer_item_about">Details&#8230;</string>
    <string name="drawer_item_help">Help</string>
    <string name="permissionRequest">Requesting write permission&#8230;</string>

    <!-- ############# -->
    <!-- Fragment Tags -->
    <!-- ############# -->

    <string name="tag_aboutFragment">AboutFragment</string>
    <string name="tag_aboutFragmentContainer">AboutFragmentContainer</string>
    <string name="tag_homeFragment">HomeFragment</string>
    <string name="tag_prefsFragment">PrefsFragment</string>
    <string name="tag_prefsFragmentContainer">PrefsFragmentContainer</string>
    <string name="tag_saltKeyActionsFragment">SaltKeyActionsFragment</string>
    <string name="tag_workhorseFragment">WorkhorseFragment</string>

    <!-- ################## -->
    <!-- Workhorse Fragment -->
    <!-- ################## -->

    <string name="workhorse_dialog_title">Workhorse</string>
    <string name="label_domain">Domain</string>
    <string name="hint_domain">The foo.bar.baz.com part of the URL</string>
    <string name="label_password">Password</string>
    <string name="hint_password">&lt;Your One True Password&gt;</string>
    <string name="label_hash">Proxy Password</string>
    <string name="checkBox_showHash">Show</string>
    <string name="checkBox_showAdvanced">Advanced&#8230;</string>
    <string name="label_iterations">Iterations</string>
    <string name="hint_iterations">10000</string>
    <string name="checkBox_truncate">Truncate</string>
    <string name="hint_truncation">-1</string>
    <string name="checkBox_noSpecialChars">No special characters</string>
    <string name="checkBox_saveOverrides">Save custom overrides</string>
    <string name="button_generate">Generate!</string>

    <!-- ############# -->
    <!-- Home Fragment -->
    <!-- ############# -->

    <string name="default_url">https://www.google.com</string>
    <string name="search_hint">Enter keywords or a URL</string>

    <!-- ######################### -->
    <!-- Salt Key Actions Fragment -->
    <!-- ######################### -->

    <string name="label_saltKey">Salt Key</string>
    <string name="checkBox_editSaltKey">Edit (Caution!)</string>
    <string name="hint_saltKey">&lt;null&gt;</string>
    <string name="button_generateSaltKey">Generate New Salt Key</string>

    <!-- ########### -->
    <!-- Preferences -->
    <!-- ########### -->

    <!-- Salt Key -->
    <string name="pref_saltKey_key">saltKey</string>
    <string name="pref_saltKey_name">Salt Key</string>
    <string name="pref_saltKey_summary">
        A "key" to generate salts from domain names
    </string>

    <!-- Default PBKDF2 Iterations -->
    <string name="pref_defaultIterations_key">defaultIterations</string>
    <string name="pref_defaultIterations_name">Default Iterations</string>
    <string name="pref_defaultIterations_summary">
        10000
    </string>

    <!-- Custom Website Overrides -->
    <string name="pref_customOverrides_key">customOverrides</string>
    <string name="pref_customOverrides_name">Custom Overrides</string>
    <string name="pref_customOverrides_summary">
        Overridden website attributes (use sparingly!)
    </string>

    <!-- ###### -->
    <!-- Schema -->
    <!-- ###### -->

    <string name="schema_default_profile_name">root</string>
    <string name="schema_profiles_key">profiles</string>
    <string name="schema_profile_name_key">name</string>
    <string name="schema_profile_settings_key">settings</string>

    <!-- ##### -->
    <!-- About -->
    <!-- ##### -->

    <!-- App Bar -->
    <string name="about_help_page">
        https://manzdagratiano.github.io/gobbledygook/
    </string>

    <!-- Headers -->
    <string name="about_info_header">About</string>
    <string name="about_version_header">Version</string>

    <!-- Creator -->
    <string name="about_creator_key">creator</string>
    <string name="about_creator_name">Creator</string>
    <string name="about_creator_summary">
        Manjul Apratim
    </string>

    <!-- License -->
    <string name="about_license_key">license</string>
    <string name="about_license_name">License</string>
    <string name="about_license_summary">
        GNU GPL v3+
    </string>
    <string name="about_license_page">
        https://www.gnu.org/licenses/gpl-3.0.txt
    </string>

    <!-- Homepage -->
    <string name="about_homepage_key">homepage</string>
    <string name="about_homepage_name">Home Page</string>
    <string name="about_homepage_summary">
        https://github.com/manzdagratiano
    </string>

    <!-- Version -->
    <string name="about_version_key">version</string>
    <string name="about_version_name">Build Version</string>

    <!-- Changelog -->
    <string name="about_changelog_key">changelog</string>
    <string name="about_changelog_name">Release Notes</string>
    <string name="about_changelog_summary">
        https://manzdagratiano.github.io/gobbledygook/release.html
    </string>

</resources>
