<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- The salt "key"
         This is a read-only preference,
         in the sense it is not editable like an EditTextPreference
         (its value is modified by other interfaces, just not directly). -->
    <android.support.v7.preference.Preference
        android:key="@string/pref_saltKey_key"
        android:title="@string/pref_saltKey_name"
        android:summary="@string/pref_saltKey_summary"
        android:editable="false"
        android:ellipsize="end"
        />
    <!-- The default # of PBKDF2 iterations.
         NOTE: Even though it has the numeric attribute and
         has inputType number, it will be saved as a string
         owing to it being an EditTextPreference.
         Therefore, when reading, it must be retrieved as such. -->
    <android.support.v7.preference.EditTextPreference
        android:key="@string/pref_defaultIterations_key"
        android:inputType="number"
        android:numeric="integer"
        android:title="@string/pref_defaultIterations_name"
        android:summary="@string/pref_defaultIterations_summary"
        />
    <!-- The encoded site attributes list, saved as stringified JSON
         This is a read-only preference,
         in the sense it is not editable like an EditTextPreference
         (its value is modified by other interfaces, just not directly). -->
    <android.support.v7.preference.Preference
        android:key="@string/pref_customOverrides_key"
        android:title="@string/pref_customOverrides_name"
        android:summary="@string/pref_customOverrides_summary"
        android:editable="false"
        android:ellipsize="end"
        />
</android.support.v7.preference.PreferenceScreen>
