<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Define a group with only a single item checkable at any point;
         initially the "home" item shall be checked on wakeup.
         From there on it will change depending upon user interaction. -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerHome"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/drawer_item_home"
            android:checked="true"
            />
        <item
            android:id="@+id/drawerAbout"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/drawer_item_about"
            />
        <item
            android:id="@+id/drawerSettingsHeader"
            android:title="@string/drawer_header_settings"
            >
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/drawerSettings"
                        android:icon="@drawable/ic_settings_black_48dp"
                        android:title="@string/drawer_item_settings"
                        />
                    <item
                        android:id="@+id/drawerSettingsExport"
                        android:icon="@drawable/ic_file_download_black_48dp"
                        android:title="@string/drawer_item_export"
                        />
                    <item
                        android:id="@+id/drawerSettingsImport"
                        android:icon="@drawable/ic_file_upload_black_48dp"
                        android:title="@string/drawer_item_import"
                        />
                </group>
            </menu>
        </item>
    </group>
</menu>
