<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:fitsSystemWindows="true"
        >

        <!-- The salt key 
             The EditText view for the salt key
             is multiline -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_saltKey"
            android:fontFamily="@string/label_fontFamily"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/saltKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="10"
            android:maxLines="20"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:hint="@string/hint_saltKey"
            />
        <!-- A checkbox to "unlock" the salt key,
             allowing operations like generating a new one,
             or loading an existing one from a file.
             This is to prevent accidental regenerations of the key. -->
        <CheckBox
            android:id="@+id/editSaltKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_editSaltKey"
            android:textStyle="italic"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <!-- The "Generate Salt Key" Button -->
        <Button
            android:id="@+id/generateSaltKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_generateSaltKey"
            android:fontFamily="@string/button_fontFamily"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

    </LinearLayout>
</ScrollView>
